# knowledge_navigator

./: app.py  menu.py  poetry  pyproject.toml  readme.md
pages/: 01_data_collection.py  02_data_organization.py  03_model_selection.py  04_encoding_storage.py  05_testing_qa.py
utils/: data_processing.py  model_utils.py  storage_utils.py
