[tool.poetry]
name = "knowledge-navigator"
version = "0.1.0"
description = ""
authors = ["Rick Anderson"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
streamlit = "^1.33.0"
pandas = "^2.2.1"
streamlit-aggrid = "^1.0.2"
beautifulsoup4 = "^4.12.3"
langchain = "^0.1.14"
langchain-community = "^0.0.31"
sentence-transformers = "^2.6.1"
faiss-cpu = "^1.8.0"
crewai = "^0.28.8"
crewai-tools = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
